--- a/pom.xml
+++ b/pom.xml
@@ -169,6 +169,17 @@
 			<classifier>jakarta</classifier>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-core</artifactId>
+			<version>6.0.11</version> <!-- 請根據你的版本進行設置 -->
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+			<version>6.0.11</version> <!-- 請根據你的版本進行設置 -->
+		</dependency>
+
 	</dependencies>
 
 	<build>
