--- a/src/main/resources/persistence.properties
+++ b/src/main/resources/persistence.properties
@@ -6,5 +6,5 @@ spring.jpa.database-platform=org.hibernate.community.dialect.SQLiteDialect
 hibernate.hbm2ddl.auto=create-drop
 hibernate.show_sql=true
 #remote.sqlite.url=jdbc:sqlite:Z:/SHARE/test.db
-remote.sqlite.url=jdbc:sqlite:D:/work/data.db
+remote.sqlite.url=jdbc:sqlite:C:/work/data.db
 local.sqlite.init=User-Course-Unit-Content-Tip-Quiz-Attendance-Oper-Message
