全部加入統一測試機制，還有加入測試紀錄的資料以及修正資料庫鎖定的問題。

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,17 @@
 #driver name
 spring.datasource.driver-class-name=org.sqlite.JDBC
 #sql addr
-spring.datasource.url=jdbc:sqlite:test.db
+#spring.datasource.url=jdbc:sqlite:test.db
+#spring.datasource.url=jdbc:sqlite:C:/work/data.db
 #show oper record
 spring.jpa.show-sql=true
 #spring session
 #spring.session.store-type=jdbc
 server.servlet.session.timeout=60m
+#spring pool
+#spring.datasource.hikari.maximum-pool-size=1
+# Set WAL mode
+#spring.datasource.hikari.connection-init-sql=PRAGMA journal_mode=WAL;
 
 #update table - old hibernate
 #spring.jpa.hibernate.ddl-auto=update
